login, signup, scoreboard, packages: done