@@ -2,6 +2,8 @@ package game_server.enums;
 
 import lombok.Getter;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @Getter
@@ -13,5 +15,9 @@ public enum HttpMethod {
     NOTSUPPORTED
     ;
 
-    public static final List<HttpMethod> listOfMethods = List.of(values());
+//    public static List<HttpMethod> listOfMethods = List.of(values()); //immutable collection
+
+    public static List<HttpMethod> listOfMethods =
+      new ArrayList<>(Arrays.asList(HttpMethod.values()));
+
 }
